# rust-template

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  rustfmt.toml  taplo.toml
.github/workflows/: ci.yml
.github/workflows/actions/rust-toolchain/: action.yml
src/: args.rs  config.rs  control_thread.rs  main.rs  opts.rs  worker_thread.rs
