[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Oliver Chalk"]
license = "MIT OR Apache-2.0"

[lints.clippy]
arithmetic_side_effects = "warn"
# See `clippy.toml`.
disallowed_methods = "warn"
match_bool = "allow"
missing_const_for_fn = "warn"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }
trivially_copy_pass_by_ref = "warn"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.3.0"
dotenvy = "0.15.7"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = "0.7.10"
toolbox = { git = "https://github.com/OliverNChalk/toolbox-rs.git", version = "0.1.0", features = [
  "tracing",
  "version",
] }
tracing = "0.1.37"

[build-dependencies]
vergen = { version = "8.2.1", features = ["build", "git", "git2", "rustc", "cargo"] }

[profile.release]
opt-level = 3
debug = true

[profile.paranoid]
inherits = "release"
overflow-checks = true
debug-assertions = true

[profile.performance]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
