[package]
name = "rust-template"
version = "0.1.0"
edition = "2024"
readme = "README.md"
authors = ["Oliver Chalk"]
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
# See `clippy.toml`.
disallowed_methods = "warn"
get_first = "allow"
inline-always = "allow"
match_bool = "allow"
missing_const_for_fn = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless-raw-string-hashes = "allow"
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
todo = "warn"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "warn"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.3.0"
dotenvy = "0.15.7"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = "0.7.10"
toolbox = { git = "https://github.com/OliverNChalk/toolbox-rs.git", version = "0.2.0", features = [
  "tracing",
  "version",
] }
tracing = "0.1.37"

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["rustc", "cargo"] }

[profile.release]
opt-level = 3
debug = true

[profile.paranoid]
inherits = "release"
overflow-checks = true
debug-assertions = true

[profile.performance]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
